--- a/contacto.html
+++ b/contacto.html
@@ -46,8 +46,9 @@
 
         <form class="formulario">
             <div class="campo">
-                <label for="nombre">Nombre</label>
-                <input
+                <label class="campo__label" for="nombre">Nombre</label>
+                <input 
+                    class="campo__field"
                     type="text"
                     name=""
                     id="nombre"
@@ -55,8 +56,9 @@
             </div>
             
             <div class="campo">
-                <label for="email">Email</label>
+                <label class="campo__label" for="email">Email</label>
                 <input
+                    class="campo__field"
                     type="text"
                     name=""
                     id="email"
@@ -64,8 +66,9 @@
             </div>
             
             <div class="campo">
-                <label for="mensaje">Mensaje</label>
+                <label class="campo__label" for="mensaje">Mensaje</label>
                 <textarea
+                    class="campo__field campo__field--textarea"
                     name=""
                     id="mensaje"
                     cols="80"
